--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = medford
-version = 1.0.2-1
+version = 1.0.3
 author = Polina Shpilker
 author_email = polina.shpilker@tufts.edu
 description = The MEDFORD Command Line tool for validating & compiling medford research metadata files.
