Fine! You win, setuptools! (Imports now Explicit)
Spent 1.5 hours trying to figure out how to make setuptools
recognize the sub-modules obj, models, etc. Gave up and changed
every single reference of 'from objs' to 'from MEDFORD.objs', et
cetera.

Compiled version of the medford package now actually functions
as intended during testing.

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ classifiers =
 [options]
 package_dir =
     = src
-packages = find:
+packages = find_namespace:
 requires-python = >=3.8
 install_requires = 
     pydantic ==2.4.2
